--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+  
 <head>
   <link rel="stylesheet" href="index.css">
 </head>
@@ -81,3 +84,5 @@
       </div><!-- tab-content -->
       
 </div> <!-- /form -->
+
+</html>
