--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
             </div>
           </div>
             
-          <div class="dropdown">
+          <div class="field-wrap">
+            <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">Dropdown</button>
             <div id="myDropdown" class="dropdown-content">
               <a href="#">SVM</a>
               <a href="#">Linear Regression</a>
             </div>
+           </div>
          </div>
 
           <div class="field-wrap">
@@ -92,5 +94,25 @@
       </div><!-- tab-content -->
       
 </div> <!-- /form -->
+<script>
+/* When the user clicks on the button, 
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
 
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script>
 </html>
