--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <input type="password"required autocomplete="off"/>
           </div>
           
-          <button type="submit" class="button button-block"/>Get Started</button>
+          <button type="submit" class="button"/>Get Started</button>
           
           </form>
 
